<resources>
    <string name="app_name">Gestion</string>
    <string name="TitleName">MoneyTrack</string>
    <string name="Configs">Config</string>
    <string name="simbolo">$</string>
    <string name="home">Home</string>
    <string name="Gastos_hoy">Total gastos hoy</string>
    <string name="Gastos_Mes">Gastos mensuales</string>
    <string name="Ingresos_hoy">Total ingresos hoy</string>
    <string name="Ingresos_mes">Ingresos mensuales</string>
    <string name="categorias">Categorías</string>
    <string name="boton">Button</string>
    <string name="edicion">Editar movimientos</string>
    <string name="hoy">Movimientos de hoy</string>
    <string name="agregar_movimiento">Agregar movimiento</string>
    <string name="movimientos_totales">Movimientos totales</string>
    <string name="exit">Salir</string>
    <string name="config">Ajustes</string>
    <string name="mount">Monto</string>
    <string name="date">Seleccione fecha</string>
    <string name="nuevo_movimiento">NUEVO MOVIMIENTO</string>
    <string name="Gasto">Gasto</string>
    <string name="Ingreso">Ingreso</string>
    <string name="selectCategorry">Seleccionar categoría</string>
    <string name="Save">Guardar</string>
    <string name="Cancel">Cancelar</string>
    <string name="image">Boleta</string>
    <string name="todo">TODO</string>
    <string name="ajuste_de_movimiento">AJUSTE DE MOVIMIENTO</string>
    <string name="crear_nuevo">Crear nuevo</string>
    <string name="volver">Volver</string>
    <string name="categor_as">Categorías</string>
    <string name="nueva_categor_a">Nueva categoría</string>
    <string name="ingrese_nombre">Ingrese nombre</string>
    <string name="name">Name</string>
    <string name="descripci_n">Descripción</string>
    <string name="id">ID</string>
    <string name="ajuste_de_categoria">Ajuste de categoria</string>
    <string name="cargar_balance">Cargar Balance</string>
</resources>