<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:background="@drawable/background2">

    <Button
        android:id="@+id/BtnCancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#f12"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/nuevo_movimiento"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TxtMount"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:elevation="0dp"
        android:ems="10"

        android:hint="@string/mount"
        android:inputType="number"
        android:outlineProvider="none"
        android:padding="12dp"
        android:textAlignment="center"

        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/TxtDate"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/date"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtMount"
        tools:ignore="KeyboardInaccessibleWidget,TextFields" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtDate">

        <RadioButton
            android:id="@+id/RadioIngreso"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:text="@string/Ingreso"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/RadioGasto"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:text="@string/Gasto"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="VisualLintBounds" />
    </RadioGroup>

    <Button
        android:id="@+id/BtnCategories"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/black"
        android:text="@string/selectCategorry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtDate"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/BtnComp"
        android:layout_width="330dp"
        android:layout_height="350dp"
        android:layout_marginTop="14dp"
        android:clickable="true"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnCategories"
        app:srcCompat="@drawable/camera"
        tools:ignore="KeyboardInaccessibleWidget" />

    <Button
        android:id="@+id/BtnSave"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#04FF00"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>