<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:textAlignment="center"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ajuste_de_movimiento"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtMount2"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""

        android:backgroundTint="@color/white"
        android:elevation="0dp"
        android:ems="10"
        android:hint="@string/mount"
        android:inputType="number"

        android:outlineProvider="none"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/txtDate2"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/date"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMount2"
        tools:ignore="KeyboardInaccessibleWidget,TextFields" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate2">

        <RadioButton
            android:id="@+id/RadioIngreso"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:text="@string/Ingreso"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="290dp" />

        <RadioButton
            android:id="@+id/RadioGasto"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:text="@string/Gasto"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="VisualLintBounds"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="290dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCategories2"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="77dp"
        android:backgroundTint="@color/black"
        android:text="@string/selectCategorry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate2"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/btnComp2"
        android:layout_width="330dp"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCategories2"
        app:srcCompat="@drawable/camera"
        tools:ignore="KeyboardInaccessibleWidget" />

    <Button
        android:id="@+id/btnSave2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#04FF00"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCancel2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#f12"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/SpinnerIDS"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:backgroundTint="@android:color/transparent"
        android:popupBackground="@android:drawable/screen_background_dark_transparent"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/BtnDeleteMov"
        android:layout_width="32dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/Configs"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/borrar"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>