<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/background2"
    android:padding="16dp">

    <Button
        android:id="@+id/BtnAll"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/movimientos_totales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardIngresosMes"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/BtnReload"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginTop="152dp"
        android:backgroundTint="@color/black"
        android:text="@string/cargar_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardIngresosMes" />

    <Button
        android:id="@+id/BtnCat"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/black"
        android:layout_marginTop="84dp"
        android:text="@string/categorias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardIngresosMes" />

    <Button
        android:id="@+id/BtnAdd"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/agregar_movimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardIngresosHoy"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

    <Button
        android:id="@+id/BtnMovements"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginTop="152dp"
        android:backgroundTint="@color/black"
        android:text="@string/hoy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardIngresosHoy"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/BtnEdit"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/black"
        android:layout_marginTop="84dp"
        android:text="@string/edicion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardIngresosHoy" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"/>

    <ImageButton
        android:id="@+id/ImgBtnBack"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Configs"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/configuraciones" />

    <!-- ==== TARJETA 1 ==== -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardGastosHoy"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:alpha="0.85"
        android:backgroundTint="@android:color/transparent"

        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toStartOf="@id/cardGastosMes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtGastosHoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Gastos_hoy"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/iconGastosHoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simbolo"
                android:textColor="@android:color/white"
                android:textSize="38sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtGastosHoy" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- ==== TARJETA 2 ==== -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardGastosMes"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:alpha="0.85"
        android:backgroundTint="@android:color/transparent"

        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardGastosHoy"
        app:layout_constraintTop_toBottomOf="@id/textView"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtGastosMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Gastos_Mes"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/iconGastosMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simbolo"
                android:textColor="@android:color/white"
                android:textSize="38sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtGastosMes" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- ==== TARJETA 3 ==== -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardIngresosHoy"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:alpha="0.85"
        android:backgroundTint="@android:color/transparent"

        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toStartOf="@id/cardIngresosMes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardGastosHoy"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtIngresosHoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Ingresos_hoy"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/iconIngresosHoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simbolo"
                android:textColor="@android:color/white"
                android:textSize="38sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtIngresosHoy" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- ==== TARJETA 4 ==== -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardIngresosMes"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:alpha="0.85"
        android:backgroundTint="@android:color/transparent"

        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardIngresosHoy"
        app:layout_constraintTop_toBottomOf="@id/cardGastosMes"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtIngresosMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Ingresos_mes"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/iconIngresosMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simbolo"
                android:textColor="@android:color/white"
                android:textSize="38sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtIngresosMes" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/BtnExit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#f12"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="34dp"
        android:text="@string/config"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImgBtnBack" />

</androidx.constraintlayout.widget.ConstraintLayout>
